style/style.css
/* ... */
.sticky .headline h1 {
  font-size: 18px;
}

.wrapper {
  opacity: 1;
  transition: all 300ms ease-out;
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.filtering {
  padding-top: 0;
  z-index: 10;
}

.items-results {
  opacity: 1;
  transition: all 300ms ease-out;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-top: 0;
}

.items-results .project {
  opacity: 0;
  display: none;
  z-index: 0;
}

.items-results .project.active {
  opacity: 1;
  display: flex;
  -webkit-animation: fadeIn 0.65s ease forwards;
  animation: fadeIn 0.65s ease forwards;
  position: relative;
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.sidebar {
  position: fixed;
  overflow-y: scroll;
  overflow-x: hidden;
  top: 0;
  right: -60%;
  z-index: 9999;
  height: 100%;
  width: 60%;
  transition: all 300ms ease-out;
  background: #000;
  padding: 0px;
  box-sizing: border-box;
  float: left;
  cursor: default;
}

.is-shift-sidebar {
  right: 0;
}

.is-shift-content {
  right: 60%;
}

.main.is-shift-content {
  gap: 100px;
}

.headline.is-shift-content {
  opacity: 0.4;
  position: absolute;
  width: calc(40% - 50px);
  left: 50px;
  margin-left: 0;
  padding-top: 92px;
}

.headline.is-shift-content h1 {
  font-size: 18px;
}

.nav.is-shift-content {
  width: 40%;
  right: 0;
}

.nav.sticky.is-shift-content {
  background: rgba(0, 0, 0, 0.3);
  backdrop-filter: blur(1em);
  border-bottom: 1px solid rgba(21, 21, 21, 1);
}

.nav.sticky.is-shift-content .headline {
  opacity: 0;
}

.nav.sticky.is-shift-content .headline h1 {
  font-size: 0px;
}

.nav.sticky.is-shift-content .home {
  padding-top: 0px;
}

.nav.is-shift-content select {
  pointer-events: none;
  padding: 0;
}

.nav.is-shift-content .home,
.nav.is-shift-content .filtering {
  opacity: 0.4;
  cursor: default;
}

.wrapper.is-shift-content {
  opacity: 0.4;
  width: 40%;
  right: 0;
}

.wrapper.is-shift-content .items-results {
  padding-top: 40px;
  padding-bottom: 60px;
}

.wrapper.is-shift-content .project-name h1 {
  font-size: 20px;
  font-weight: 600;
  cursor: default;
}

.wrapper.is-shift-content .project,
.nav.is-shift-content .nav-items {
  width: calc(100% - 100px);
}

.nav.is-shift-content .nav-items .filtering {
  padding-top: 3px;
}

.nav.is-shift-content .nav-items .filtering .form-control {
  width: 115px;
  background-color: rgba(0, 255, 184, 0);
}

.wrapper.is-shift-content .project {
  padding: 20px 0;
}

.wrapper.is-shift-content .element {
  cursor: default;
  /* pointer-events: none; */
}

.wrapper.is-shift-content .project-name {
  pointer-events: none;
}

.wrapper.is-shift-content .project:hover {
  background-color: rgba(0, 0, 0, 0);
}

.wrapper.is-shift-content .open {
  padding: 2px;
}

.wrapper.is-shift-content .ico-open {
  font-size: 20px !important;
  cursor: default;
}

.wrapper.is-shift-content .project-attributes {
  width: 70%;
  gap: 15px;
  pointer-events: none;
}

.wrapper.is-shift-content .project-attributes .elements {
  gap: 10px;
}

/* Project Item */

.project {
  position: relative;
  width: 60%;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  border-top: 1px solid rgba(21, 21, 21, 0);
  border-bottom: 1px solid rgba(21, 21, 21, 1);
  padding: 20px 20px;
  vertical-align: middle;
  background-color: rgba(21, 21, 21, 0);
  transition: all 300ms ease-out;
}

.project:hover {
  border-top: 1px solid rgba(21, 21, 21, 0);
  border-bottom: 1px solid rgba(21, 21, 21, 0);
  background-color: rgba(21, 21, 21, 1);
}

.wrapper.is-shift-content .project {
  border-top: 1px solid rgba(21, 21, 21, 0);
  border-bottom: 1px solid rgba(50, 50, 50, 1);
}

.wrapper.is-shift-content .project:last-child {
  border-top: 1px solid rgba(21, 21, 21, 0);
  border-bottom: 1px solid rgba(50, 50, 50, 0);
}

.wrapper.is-shift-content.project:hover {
  border-top: 1px solid rgba(21, 21, 21, 0);
  border-bottom: 1px solid rgba(21, 21, 21, 0);
  background-color: rgba(21, 21, 21, 0);
}

.project:last-child {
  margin: 0 auto;
  border-top: 1px solid rgba(21, 21, 21, 0);
  border-bottom: 1px solid rgba(21, 21, 21, 0);
}

.project-active {
  border-top: 1px solid rgba(0, 255, 184, 1) !important;
  border-bottom: 1px solid rgba(0, 255, 184, 1) !important;
}

.project-active:hover {
  border-bottom: 1px solid rgba(0, 255, 184, 1);
}

.project-title {
  --ease: all 300ms ease;

  width: calc(100% - 50px);
  /* display: flex;
  flex-direction: column; */
  padding: 35px 0px 0px;
  transition: var(--ease);
}

.project-title h1 {
  --ease: all 300ms ease;

  padding-bottom: 15px;
  color: #00ffb8;
  font-family: "Hubot Sans";
  font-size: 32px;
  font-weight: 600;
  font-stretch: 115%;
  line-height: 1.2em;
  text-wrap: balance;
  transition: var(--ease);
}

.sticky {
  position: sticky;
  top: 0;
  z-index: 100;
  border-top: 0;
}

.sticky .project-title {
  padding: 15px 0px 0px;
}

.sticky .project-title h1 {
  font-size: 20px;
  padding-bottom: 0;
}

.sticky .project-header {
  padding-bottom: 0px;
  border-bottom: 1px solid rgba(0, 255, 184, 0);
}

.sticky .project-intro {
  height: 57px;
}

/* .sticky .project-details {
  display: none;
} */

.progress {
  height: 1px;
  background-color: #00ffb8;
  transition: all linear 0.1s;
  min-width: 0%;
  width: 0%;
}

.project-name {
  width: 35%;
}

.project-name h1 {
  font-family: "Hubot Sans";
  font-size: 24px;
  line-height: 1.3em;
  font-weight: 500;
  font-stretch: 115%;
  text-align: left;
  color: #00ffb8;
  background-color: rgba(0, 0, 0, 0);
  transition: all 0.3s ease;
}

.element {
  position: absolute;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.element img {
  position: absolute;
  object-fit: cover;
  height: 20vh;
  top: -10vh;
  left: 2ch;
  opacity: 0;
  visibility: hidden;
}
/* ... */

